--- a/pgmoneta-rocky10/conf/pgmoneta.conf
+++ b/pgmoneta-rocky10/conf/pgmoneta.conf
@@ -2,17 +2,15 @@
 host = *
 metrics = 5001
 
-base_dir = /home/pgmoneta
-
+base_dir = /pgmoneta
 compression = zstd
-
 retention = 7
 
 log_type = file
 log_level = info
-log_path = /tmp/pgmoneta.log
+log_path = /pgmoneta/pgmoneta.log
 
-unix_socket_dir = /tmp/
+unix_socket_dir = /var/run/pgmoneta/
 
 tls = off
 tls_cert_file = /pgmoneta/server.crt
